--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "date-from-clocktime",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Get a valid Date object from a clocktime string. '11:30' → [Date object]",
   "license": "MIT",
   "repository": "radiovisual/date-from-clocktime",
@@ -19,6 +19,15 @@
     "index.js"
   ],
   "keywords": [
+    "secs",
+    "min",
+    "second",
+    "minute",
+    "hour",
+    "twenty-four",
+    "twentyfour",
+    "pm",
+    "am",
     "str",
     "string",
     "clocktime",
